tools/KLEE_SOURCE/Release+Asserts/bin/temp_test/klee-out-24/test000007.ptr.err
Error: memory error: out of bound pointer
File: /home/qirong/Desktop/KLEE_SOURCE/Release+Asserts/bin/link-list2.c
Line: 17
Stack: 
	#0 00000045 in remove_from_list (head=43856176, node=43970400) at /home/qirong/Desktop/KLEE_SOURCE/Release+Asserts/bin/link-list2.c:17
	#1 00000089 in main () at /home/qirong/Desktop/KLEE_SOURCE/Release+Asserts/bin/link-list2.c:40
Info: 
	address: (Add w64 16
         (ReadLSB w64 8 a1))
	example: 16
	range: [0, 18446744073709551615]
	next: object at 43581696 of size 3
		MO7[3] allocated at global:.str
